bug and scrollbar

--- a/OtherRoutes/Css/rafiStyles.css
+++ b/OtherRoutes/Css/rafiStyles.css
@@ -190,6 +190,7 @@ h6 {
 
 ::-webkit-scrollbar {
     width: 8px;
+    height: 4px;
 }
 
 ::-webkit-scrollbar-thumb {
