--- a/OtherRoutes/Css/shakibStyles.css
+++ b/OtherRoutes/Css/shakibStyles.css
@@ -312,15 +312,11 @@ a:hover {
 
 
 
-
-
-
-
-
 /* For Customizing Scrollbar */
 
 ::-webkit-scrollbar {
     width: 8px;
+    height: 4px;
 }
 
 ::-webkit-scrollbar-thumb {
